# CoreUtilities

./: .gitignore  CMakeLists.txt  conan_install.sh  conanfile.txt  generate_cmake.sh
cmake/: dependencies.cmake  macros.cmake  options.cmake  project.cmake
include/patterns/: ThreadSafeDeque.hpp  ThreadSafeMap.hpp  timer.hpp
source/: CMakeLists.txt
test/patterns/: CMakeLists.txt
test/patterns/ThreadSafeDeque/: CMakeLists.txt  test_ThreadSafeDeque.cpp
test/patterns/timer/: CMakeLists.txt  test_timer.cpp
